# flos-encoders

./: README.md
cpp/: CMakeLists.txt  simple_vlc_encoder.cpp  simple_vlc_encoder.hpp
cpp/integer_encoder/: IntegerCodec.cpp  IntegerCodec.hpp  testIntegerCodec.cpp
python/: simple_vlc_encoder.py
python/integer_encoder/: integer_encoder.py  test_integer_encoder.py
